--- a/sytlesheets/scss/main_styles.scss
+++ b/sytlesheets/scss/main_styles.scss
@@ -1,2 +1,74 @@
+@use 'typography';
+
 @import 'reset';
 @import 'layout';
+@import 'typography';
+
+
+/* EXTRAS */
+
+
+/* Buttons */
+
+a.btn, 
+button.btn {
+  display: inline-block;
+  padding: .75em 1em;
+  margin: .5em;
+  border: 1px solid hsl(0, 0%, 20%);
+  border-radius: 5px;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, .2);
+  font-family: $default-general-purpose-font;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-shadow: 
+    0px 1px 1px rgba(0, 0, 0, 0.2),
+    -1px 0px 1px rgba(0, 0, 0, 0.2);
+  color: black;
+}
+
+.btn:hover {
+  text-shadow: 
+  0px 1px 1px rgba(255, 255, 255, 0.2),
+  -1px 0px 1px rgba(255, 255, 255, 0.2);
+  color: white;
+  background-color: black;
+}
+
+/* RESPONSIVE MEDIA */
+
+/* WRAPPER OF THE MEDIA */
+
+.media-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.media-container.ratio-16-9 {
+  padding-top: 56.25%;
+}
+.media-container.ratio-4-3 {
+  padding-top: 75%;
+}
+
+.media-container.ratio-3-2 {
+  padding-top: 66%;
+}
+
+.media-container.ratio-1-1 {
+  padding-top: 100%;
+}
+
+/* PUT THIS CLASS TO THE MEDIA SOURCE, EX: IMG OR IFRAME. */
+
+.responsive-media {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
