--- a/sytlesheets/framework.css
+++ b/sytlesheets/framework.css
@@ -1,84 +1,3 @@
-/* VARIABLES */
-/* 28 26 24 22 20 */
-/* TEXT RELETED */
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.content-container {
-  margin: 1em 0.75em;
-  padding: 1em;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 14px;
-  line-height: 1.5;
-}
-
-.content-container .title {
-  font-size: 28px;
-  font-weight: bold;
-  line-height: 1.2;
-}
-
-.title.size-1 {
-  font-size: 2.5em;
-}
-
-.title.size-2 {
-  font-size: 28px;
-}
-
-.title.size-3 {
-  font-size: 26px;
-}
-
-.title.size-4 {
-  font-size: 24px;
-}
-
-.title.size-5 {
-  font-size: 22px;
-}
-
-.title.size-6 {
-  font-size: 20px;
-}
-
-.bold,
-strong {
-  font-weight: bold;
-}
-
-.italic,
-em {
-  font-style: italic;
-}
-
-.content-container ul {
-  list-style: circle inside;
-}
-
-.content-container ol {
-  list-style: decimal inside;
-}
-
-.text-centered {
-  text-align: center;
-}
-
-.text-upper {
-  text-transform: uppercase;
-}
-
-a {
-  text-decoration: none;
-  color: #404040;
-  transition: all 0.2s;
-}
-
-a:hover {
-  color: black;
-}
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -1010,4 +929,4 @@ button.btn {
   height: 100%;
 }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=framework.css.map */
