--- a/sytlesheets/scss/main_styles.scss
+++ b/sytlesheets/scss/main_styles.scss
@@ -1,5 +1,3 @@
-@use 'typography';
-
 @import 'reset';
 @import 'layout';
 @import 'typography';
@@ -18,7 +16,7 @@ button.btn {
   border: 1px solid hsl(0, 0%, 20%);
   border-radius: 5px;
   box-shadow: 1px 2px 2px rgba(0, 0, 0, .2);
-  font-family: $default-general-purpose-font;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
