--- a/sytlesheets/scss/_box.scss
+++ b/sytlesheets/scss/_box.scss
@@ -1,33 +1,60 @@
-/* VARIABLES */
-$sizes : ( "1": 2em, "2": 1.75em, "3": 1.5em, "4": 1.25em, "5": 1em, "6" : .75em);
+
+$sizes : ("none": 0, "1": .75em, "2": 1em, "3": 1.25em, "4": 1.5em, "5": 1.75em, "6": 2em);
 
 @each $key, $value in $sizes {
-  .p-#{$key} { padding: $value; }
+  .p-#{$key} { padding: $value !important; }
   .px-#{$key} {
-    padding-left:  $value;
-    padding-right: $value;
+    padding-left:  $value !important;
+    padding-right: $value !important;
   }
+  .pl-#{$key} { padding-left: $value !important; }
+  .pr-#{$key} { padding-right: $value !important; }
+
   .py-#{$key} {
-    padding-top: $value;
-    padding-bottom: $value;
+    padding-top: $value !important;
+    padding-bottom: $value !important;
   }
-  .m-#{$key} { margin: $value; }
+
+  .pt-#{$key} { padding-top: $value !important; }
+  .pb-#{$key} { padding-bottom: $value !important; }
+
+  .m-#{$key} { margin: $value !important; }
   .mx-#{$key} {
-    margin-left: $value;
-    margin-right: $value;
+    margin-left: $value !important;
+    margin-right: $value !important;
   }
+
+  .ml-#{$key} { margin-left: $value !important; }
+  .mr-#{$key} { margin-right: $value !important; }
+
   .my-#{$key} {
-    margin-top: $value;
-    margin-bottom: $value;
+    margin-top: $value !important;
+    margin-bottom: $value !important;
   }
+
+  .mt-#{$key} { margin-top: $value !important; }
+  .mb-#{$key} { margin-bottom: $value !important; }
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
 }
 
 .rounded {
-  border-radius: 50%;
+  border-radius: 50% !important;
 }
 
 .bordered {
-  border: 1px solid;
+  border: 1px solid black;
 }
 
 .has-shadow {
