--- a/sytlesheets/scss/_layout.scss
+++ b/sytlesheets/scss/_layout.scss
@@ -1,17 +1,33 @@
-/* VARIABLES */
 
-$gap-sizes: ("1" : .5em, "2" : .75em, "3" : 1em, "4": 1.5em);
-$alignment-justification-positions: (start, end, center);
+$gap-sizes: ("1": .5em, "2": .75em, "3": 1em, "4": 1.5em, "5": 2em);
+$alignment-justification-positions: (start, end, center, space-evenly, space-around, space-between);
 
 /* LAYOUT */
 
 
 .grid {
-  max-width: 100%;
+  display: grid;
+}
+
+.grid-12,
+.row {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  padding: 1em;
-  margin: 1em;
+}
+
+@media (min-width: 480px) {
+  .grid-12,
+  .row { max-width: 420px;}
+}
+
+@media (min-width: 760px) {
+  .grid-12,
+  .row { max-width: 720px;}
+}
+
+@media (min-width: 1020px) {
+  .grid-12,
+  .row { max-width: 1200px;}
 }
 
 /* Base class for sizing and positioning the child elements.
@@ -45,7 +61,7 @@ $alignment-justification-positions: (start, end, center);
 /* SIZING GAP */
 
 @mixin gap($number, $gap-size) {
-  .grid.gap-#{$number} { gap: $gap-size; }
+  .gap-#{$number} { gap: $gap-size; }
 }
 
 @each $key, $value in  $gap-sizes{
@@ -57,15 +73,38 @@ $alignment-justification-positions: (start, end, center);
 
 @mixin alignment-justification($pos) {
 
-  .grid.a-#{$pos} { align-items: $pos; }
-  .grid.j-#{$pos} { justify-items: $pos; }
+  .a-items-#{$pos} { align-items: $pos; }
+  .j-items-#{$pos} { justify-items: $pos; }
+  .a-content-#{$pos} { align-content: $pos; }
+  .j-content-#{$pos} { justify-content: $pos; }
+  .a-self-#{$pos} { align-self: $pos; }
+  .j-self-#{$pos} { justify-self: $pos; }
 }
 
-.grid.centered {
+.content-centered {
   justify-content: center;
   align-content: center;
 }
 
 @each $value in  $alignment-justification-positions {
   @include alignment-justification($value);
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+@for $value from 1 to 4 {
+  .flex-#{$value} {
+    flex: $value;
+  }
 }
