--- a/sytlesheets/scss/main_styles.scss
+++ b/sytlesheets/scss/main_styles.scss
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'layout';
 @import 'typography';
+@import 'box';
 
 
 /* EXTRAS */
@@ -38,30 +39,28 @@ button.btn {
 
 /* WRAPPER OF THE MEDIA */
 
-.media-container {
+.iframe-container {
   position: relative;
   overflow: hidden;
   width: 100%;
 }
 
-.media-container.ratio-16-9 {
+.iframe-container.ratio-16-9 {
   padding-top: 56.25%;
 }
-.media-container.ratio-4-3 {
+.iframe-container.ratio-4-3 {
   padding-top: 75%;
 }
 
-.media-container.ratio-3-2 {
+.iframe-container.ratio-3-2 {
   padding-top: 66%;
 }
 
-.media-container.ratio-1-1 {
+.iframe-container.ratio-1-1 {
   padding-top: 100%;
 }
 
-/* PUT THIS CLASS TO THE MEDIA SOURCE, EX: IMG OR IFRAME. */
-
-.responsive-media {
+.responsive-iframe {
   position: absolute;
   top: 0;
   left: 0;
@@ -69,4 +68,34 @@ button.btn {
   right: 0;
   width: 100%;
   height: 100%;
+}
+
+/* IN CASE OF USING A IMG TAG. PUT .media-container to a div and img inside.
+  SET THE DESIRE SIZE TO .media-container, not to .responsive-img.
+  Use .responsive-img if you want to set only the width value.
+  Use .responsive-img-alt if you want to set height.
+*/
+
+.media-container .responsive-img {
+  width: 100%;
+  height: auto;
+}
+
+.media-container .responsive-img-alt {
+  height: 100%;
+  width: 100%;
+}
+
+
+/* NAVBARS */ 
+
+.navigation {
+  display: flex;
+  flex-wrap: wrap;
+
+  a {
+    display: block;
+    padding: .75em 1em;
+    font-weight: bold;
+  }
 }
