--- a/sytlesheets/framework.css
+++ b/sytlesheets/framework.css
@@ -58,16 +58,35 @@ table {
   box-sizing: border-box;
 }
 
-/* VARIABLES */
 /* LAYOUT */
 .grid {
-  max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  padding: 1em;
-  margin: 1em;
 }
 
+.grid-12,
+.row {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+@media (min-width: 480px) {
+  .grid-12,
+.row {
+    max-width: 420px;
+  }
+}
+@media (min-width: 760px) {
+  .grid-12,
+.row {
+    max-width: 720px;
+  }
+}
+@media (min-width: 1020px) {
+  .grid-12,
+.row {
+    max-width: 1200px;
+  }
+}
 /* Base class for sizing and positioning the child elements.
   First number is for the position and second number for how many columns take up */
 .column-1 {
@@ -743,54 +762,201 @@ table {
 }
 
 /* SIZING GAP */
-.grid.gap-1 {
+.gap-1 {
   gap: 0.5em;
 }
 
-.grid.gap-2 {
+.gap-2 {
   gap: 0.75em;
 }
 
-.grid.gap-3 {
+.gap-3 {
   gap: 1em;
 }
 
-.grid.gap-4 {
+.gap-4 {
   gap: 1.5em;
 }
 
+.gap-5 {
+  gap: 2em;
+}
+
 /* ALIGNING AND JUSTIFYING */
-.grid.centered {
+.content-centered {
   justify-content: center;
   align-content: center;
 }
 
-.grid.a-start {
+.a-items-start {
   align-items: start;
 }
 
-.grid.j-start {
+.j-items-start {
   justify-items: start;
 }
 
-.grid.a-end {
+.a-content-start {
+  align-content: start;
+}
+
+.j-content-start {
+  justify-content: start;
+}
+
+.a-self-start {
+  align-self: start;
+}
+
+.j-self-start {
+  justify-self: start;
+}
+
+.a-items-end {
   align-items: end;
 }
 
-.grid.j-end {
+.j-items-end {
   justify-items: end;
 }
 
-.grid.a-center {
+.a-content-end {
+  align-content: end;
+}
+
+.j-content-end {
+  justify-content: end;
+}
+
+.a-self-end {
+  align-self: end;
+}
+
+.j-self-end {
+  justify-self: end;
+}
+
+.a-items-center {
   align-items: center;
 }
 
-.grid.j-center {
+.j-items-center {
   justify-items: center;
 }
 
-/* VARIABLES */
-/* 28 26 24 22 20 */
+.a-content-center {
+  align-content: center;
+}
+
+.j-content-center {
+  justify-content: center;
+}
+
+.a-self-center {
+  align-self: center;
+}
+
+.j-self-center {
+  justify-self: center;
+}
+
+.a-items-space-evenly {
+  align-items: space-evenly;
+}
+
+.j-items-space-evenly {
+  justify-items: space-evenly;
+}
+
+.a-content-space-evenly {
+  align-content: space-evenly;
+}
+
+.j-content-space-evenly {
+  justify-content: space-evenly;
+}
+
+.a-self-space-evenly {
+  align-self: space-evenly;
+}
+
+.j-self-space-evenly {
+  justify-self: space-evenly;
+}
+
+.a-items-space-around {
+  align-items: space-around;
+}
+
+.j-items-space-around {
+  justify-items: space-around;
+}
+
+.a-content-space-around {
+  align-content: space-around;
+}
+
+.j-content-space-around {
+  justify-content: space-around;
+}
+
+.a-self-space-around {
+  align-self: space-around;
+}
+
+.j-self-space-around {
+  justify-self: space-around;
+}
+
+.a-items-space-between {
+  align-items: space-between;
+}
+
+.j-items-space-between {
+  justify-items: space-between;
+}
+
+.a-content-space-between {
+  align-content: space-between;
+}
+
+.j-content-space-between {
+  justify-content: space-between;
+}
+
+.a-self-space-between {
+  align-self: space-between;
+}
+
+.j-self-space-between {
+  justify-self: space-between;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex-2 {
+  flex: 2;
+}
+
+.flex-3 {
+  flex: 3;
+}
+
 /* TEXT RELETED */
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -804,34 +970,34 @@ body {
   line-height: 1.5;
 }
 
-.content-container .title {
-  font-size: 28px;
+.title {
+  font-size: 22px;
   font-weight: bold;
   line-height: 1.2;
 }
 
-.title.size-1 {
-  font-size: 2.5em;
+.size-1 {
+  font-size: 20px;
 }
 
-.title.size-2 {
-  font-size: 28px;
-}
-
-.title.size-3 {
-  font-size: 26px;
-}
-
-.title.size-4 {
-  font-size: 24px;
-}
-
-.title.size-5 {
+.size-2 {
   font-size: 22px;
 }
 
-.title.size-6 {
-  font-size: 20px;
+.size-3 {
+  font-size: 24px;
+}
+
+.size-4 {
+  font-size: 26px;
+}
+
+.size-5 {
+  font-size: 2em;
+}
+
+.size-6 {
+  font-size: 2.5em;
 }
 
 .bold,
@@ -864,10 +1030,456 @@ a {
   text-decoration: none;
   color: #404040;
   transition: all 0.2s;
+  cursor: pointer;
 }
 
 a:hover {
   color: black;
+}
+
+.p-none {
+  padding: 0 !important;
+}
+
+.px-none {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+.pl-none {
+  padding-left: 0 !important;
+}
+
+.pr-none {
+  padding-right: 0 !important;
+}
+
+.py-none {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.pt-none {
+  padding-top: 0 !important;
+}
+
+.pb-none {
+  padding-bottom: 0 !important;
+}
+
+.m-none {
+  margin: 0 !important;
+}
+
+.mx-none {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.ml-none {
+  margin-left: 0 !important;
+}
+
+.mr-none {
+  margin-right: 0 !important;
+}
+
+.my-none {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+.mt-none {
+  margin-top: 0 !important;
+}
+
+.mb-none {
+  margin-bottom: 0 !important;
+}
+
+.p-1 {
+  padding: 0.75em !important;
+}
+
+.px-1 {
+  padding-left: 0.75em !important;
+  padding-right: 0.75em !important;
+}
+
+.pl-1 {
+  padding-left: 0.75em !important;
+}
+
+.pr-1 {
+  padding-right: 0.75em !important;
+}
+
+.py-1 {
+  padding-top: 0.75em !important;
+  padding-bottom: 0.75em !important;
+}
+
+.pt-1 {
+  padding-top: 0.75em !important;
+}
+
+.pb-1 {
+  padding-bottom: 0.75em !important;
+}
+
+.m-1 {
+  margin: 0.75em !important;
+}
+
+.mx-1 {
+  margin-left: 0.75em !important;
+  margin-right: 0.75em !important;
+}
+
+.ml-1 {
+  margin-left: 0.75em !important;
+}
+
+.mr-1 {
+  margin-right: 0.75em !important;
+}
+
+.my-1 {
+  margin-top: 0.75em !important;
+  margin-bottom: 0.75em !important;
+}
+
+.mt-1 {
+  margin-top: 0.75em !important;
+}
+
+.mb-1 {
+  margin-bottom: 0.75em !important;
+}
+
+.p-2 {
+  padding: 1em !important;
+}
+
+.px-2 {
+  padding-left: 1em !important;
+  padding-right: 1em !important;
+}
+
+.pl-2 {
+  padding-left: 1em !important;
+}
+
+.pr-2 {
+  padding-right: 1em !important;
+}
+
+.py-2 {
+  padding-top: 1em !important;
+  padding-bottom: 1em !important;
+}
+
+.pt-2 {
+  padding-top: 1em !important;
+}
+
+.pb-2 {
+  padding-bottom: 1em !important;
+}
+
+.m-2 {
+  margin: 1em !important;
+}
+
+.mx-2 {
+  margin-left: 1em !important;
+  margin-right: 1em !important;
+}
+
+.ml-2 {
+  margin-left: 1em !important;
+}
+
+.mr-2 {
+  margin-right: 1em !important;
+}
+
+.my-2 {
+  margin-top: 1em !important;
+  margin-bottom: 1em !important;
+}
+
+.mt-2 {
+  margin-top: 1em !important;
+}
+
+.mb-2 {
+  margin-bottom: 1em !important;
+}
+
+.p-3 {
+  padding: 1.25em !important;
+}
+
+.px-3 {
+  padding-left: 1.25em !important;
+  padding-right: 1.25em !important;
+}
+
+.pl-3 {
+  padding-left: 1.25em !important;
+}
+
+.pr-3 {
+  padding-right: 1.25em !important;
+}
+
+.py-3 {
+  padding-top: 1.25em !important;
+  padding-bottom: 1.25em !important;
+}
+
+.pt-3 {
+  padding-top: 1.25em !important;
+}
+
+.pb-3 {
+  padding-bottom: 1.25em !important;
+}
+
+.m-3 {
+  margin: 1.25em !important;
+}
+
+.mx-3 {
+  margin-left: 1.25em !important;
+  margin-right: 1.25em !important;
+}
+
+.ml-3 {
+  margin-left: 1.25em !important;
+}
+
+.mr-3 {
+  margin-right: 1.25em !important;
+}
+
+.my-3 {
+  margin-top: 1.25em !important;
+  margin-bottom: 1.25em !important;
+}
+
+.mt-3 {
+  margin-top: 1.25em !important;
+}
+
+.mb-3 {
+  margin-bottom: 1.25em !important;
+}
+
+.p-4 {
+  padding: 1.5em !important;
+}
+
+.px-4 {
+  padding-left: 1.5em !important;
+  padding-right: 1.5em !important;
+}
+
+.pl-4 {
+  padding-left: 1.5em !important;
+}
+
+.pr-4 {
+  padding-right: 1.5em !important;
+}
+
+.py-4 {
+  padding-top: 1.5em !important;
+  padding-bottom: 1.5em !important;
+}
+
+.pt-4 {
+  padding-top: 1.5em !important;
+}
+
+.pb-4 {
+  padding-bottom: 1.5em !important;
+}
+
+.m-4 {
+  margin: 1.5em !important;
+}
+
+.mx-4 {
+  margin-left: 1.5em !important;
+  margin-right: 1.5em !important;
+}
+
+.ml-4 {
+  margin-left: 1.5em !important;
+}
+
+.mr-4 {
+  margin-right: 1.5em !important;
+}
+
+.my-4 {
+  margin-top: 1.5em !important;
+  margin-bottom: 1.5em !important;
+}
+
+.mt-4 {
+  margin-top: 1.5em !important;
+}
+
+.mb-4 {
+  margin-bottom: 1.5em !important;
+}
+
+.p-5 {
+  padding: 1.75em !important;
+}
+
+.px-5 {
+  padding-left: 1.75em !important;
+  padding-right: 1.75em !important;
+}
+
+.pl-5 {
+  padding-left: 1.75em !important;
+}
+
+.pr-5 {
+  padding-right: 1.75em !important;
+}
+
+.py-5 {
+  padding-top: 1.75em !important;
+  padding-bottom: 1.75em !important;
+}
+
+.pt-5 {
+  padding-top: 1.75em !important;
+}
+
+.pb-5 {
+  padding-bottom: 1.75em !important;
+}
+
+.m-5 {
+  margin: 1.75em !important;
+}
+
+.mx-5 {
+  margin-left: 1.75em !important;
+  margin-right: 1.75em !important;
+}
+
+.ml-5 {
+  margin-left: 1.75em !important;
+}
+
+.mr-5 {
+  margin-right: 1.75em !important;
+}
+
+.my-5 {
+  margin-top: 1.75em !important;
+  margin-bottom: 1.75em !important;
+}
+
+.mt-5 {
+  margin-top: 1.75em !important;
+}
+
+.mb-5 {
+  margin-bottom: 1.75em !important;
+}
+
+.p-6 {
+  padding: 2em !important;
+}
+
+.px-6 {
+  padding-left: 2em !important;
+  padding-right: 2em !important;
+}
+
+.pl-6 {
+  padding-left: 2em !important;
+}
+
+.pr-6 {
+  padding-right: 2em !important;
+}
+
+.py-6 {
+  padding-top: 2em !important;
+  padding-bottom: 2em !important;
+}
+
+.pt-6 {
+  padding-top: 2em !important;
+}
+
+.pb-6 {
+  padding-bottom: 2em !important;
+}
+
+.m-6 {
+  margin: 2em !important;
+}
+
+.mx-6 {
+  margin-left: 2em !important;
+  margin-right: 2em !important;
+}
+
+.ml-6 {
+  margin-left: 2em !important;
+}
+
+.mr-6 {
+  margin-right: 2em !important;
+}
+
+.my-6 {
+  margin-top: 2em !important;
+  margin-bottom: 2em !important;
+}
+
+.mt-6 {
+  margin-top: 2em !important;
+}
+
+.mb-6 {
+  margin-bottom: 2em !important;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.rounded {
+  border-radius: 50% !important;
+}
+
+.bordered {
+  border: 1px solid black;
+}
+
+.has-shadow {
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 /* EXTRAS */
@@ -896,30 +1508,29 @@ button.btn {
 
 /* RESPONSIVE MEDIA */
 /* WRAPPER OF THE MEDIA */
-.media-container {
+.iframe-container {
   position: relative;
   overflow: hidden;
   width: 100%;
 }
 
-.media-container.ratio-16-9 {
+.iframe-container.ratio-16-9 {
   padding-top: 56.25%;
 }
 
-.media-container.ratio-4-3 {
+.iframe-container.ratio-4-3 {
   padding-top: 75%;
 }
 
-.media-container.ratio-3-2 {
+.iframe-container.ratio-3-2 {
   padding-top: 66%;
 }
 
-.media-container.ratio-1-1 {
+.iframe-container.ratio-1-1 {
   padding-top: 100%;
 }
 
-/* PUT THIS CLASS TO THE MEDIA SOURCE, EX: IMG OR IFRAME. */
-.responsive-media {
+.responsive-iframe {
   position: absolute;
   top: 0;
   left: 0;
@@ -927,6 +1538,32 @@ button.btn {
   right: 0;
   width: 100%;
   height: 100%;
+}
+
+/* IN CASE OF USING A IMG TAG. PUT .media-container to a div and img inside.
+  SET THE DESIRE SIZE TO .media-container, not to .responsive-img.
+  Use .responsive-img if you want to set only the width value.
+  Use .responsive-img-alt if you want to set height.
+*/
+.media-container .responsive-img {
+  width: 100%;
+  height: auto;
+}
+
+.media-container .responsive-img-alt {
+  height: 100%;
+  width: 100%;
+}
+
+/* NAVBARS */
+.navigation {
+  display: flex;
+  flex-wrap: wrap;
+}
+.navigation a {
+  display: block;
+  padding: 0.75em 1em;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=framework.css.map */
